--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -93,7 +93,7 @@ body {
     text-decoration: none;
     color: var(--text-color);
     font-size: 1.4rem;
-    padding: 4px 16px;
+    padding: 1rem 1rem;
     display: block;
 }
 
