--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -1485,6 +1485,25 @@ i.home-product-item__like-icon-fill {
     opacity: 1;
 }
 
+
+.product-seen__actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-actions {
+    outline: none;
+    background-color: #EE4D2D;
+    color: #fff;
+    border-radius: 8px;
+    height: 2.2rem;
+    width: 100%;
+    margin: 0 1rem;
+    border: none;
+    cursor: pointer;
+}
+
 /* Pre Loading */
 #loading {
     background-color: #eee;
